[gd_scene load_steps=8 format=4 uid="uid://b5nyvted8tblf"]

[ext_resource type="Script" uid="uid://haoiepdbgval" path="res://src/plate/plate.gd" id="1_qe775"]
[ext_resource type="Texture2D" uid="uid://bodxw8vwjhm1n" path="res://assets/plate/plate.png" id="2_bgxfn"]
[ext_resource type="FontFile" uid="uid://b6kt7bkmug1le" path="res://assets/font/pixelade/PIXELADE.TTF" id="3_bgxfn"]
[ext_resource type="Texture2D" uid="uid://dnohw0entmaee" path="res://assets/dialog_box/borders.png" id="3_c6vly"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tl5jy"]
size = Vector2(16, 15)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4o13s"]
texture = ExtResource("3_c6vly")
texture_region_size = Vector2i(8, 4)
0:0/next_alternative_id = 4
0:0/0 = 0
0:1/0 = 0
1:0/0 = 0

[sub_resource type="TileSet" id="TileSet_t8op0"]
tile_size = Vector2i(8, 4)
sources/2 = SubResource("TileSetAtlasSource_4o13s")

[node name="plate" type="Area2D"]
script = ExtResource("1_qe775")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_tl5jy")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_bgxfn")
offset = Vector2(0, -2)

[node name="dialog_box" type="Node2D" parent="."]
visible = false
z_index = 99
y_sort_enabled = true

[node name="Label" type="Label" parent="dialog_box"]
z_index = 1
offset_left = -21.0
offset_top = -21.0
offset_right = 188.99998
offset_bottom = 28.999996
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("3_bgxfn")
theme_override_font_sizes/font_size = 22
autowrap_mode = 1

[node name="TileMapLayer" type="TileMapLayer" parent="dialog_box"]
tile_map_data = PackedByteArray("AAD9//v/AgAAAAAAAAD9//z/AgAAAAAAAAD9//3/AgAAAAEAAAACAPv/AgAAAAAAABACAPz/AgAAAAAAABACAP3/AgAAAAEAABD9//r/AgAAAAEAACD+//r/AgABAAAAAAD+//3/AgABAAAAADD///r/AgABAAAAAAD///3/AgABAAAAADAAAPr/AgABAAAAAAAAAP3/AgABAAAAADABAPr/AgABAAAAAAABAP3/AgABAAAAADACAPr/AgAAAAEAADA=")
tile_set = SubResource("TileSet_t8op0")
occlusion_enabled = false

[node name="ColorRect" type="ColorRect" parent="dialog_box"]
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = -8.0
color = Color(0, 0.1882353, 0.23137255, 1)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
